<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottomNavigationBarInformationFragment"
            android:icon="@drawable/ic_info"
            android:title="@string/information" />

        <item
            android:id="@+id/bottomNavigationBarSquareFragment"
            android:icon="@drawable/ic_square"
            android:title="@string/square" />

        <item
            android:id="@+id/bottomNavigationBarGameFragment"
            android:icon="@drawable/ic_game"
            android:title="@string/game" />

        <item
            android:id="@+id/bottomNavigationBarDashboardFragment"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    </group>
</menu>