<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/login_edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:text="user3"
                android:textColor="#607d8b"
                android:textColorHint="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/login_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:text="123"
                android:textColor="#607d8b"
                android:textColorHint="#607d8b" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="45dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="#009688"
            android:text="@string/hint_login2"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/hint_register2"
            android:textColor="?android:textColorLink"
            style="?borderlessButtonStyle" />


    </LinearLayout>
</layout>