<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
                app:counterTextAppearance="@style/counterAppearance"
                android:hint="签名">

                <EditText
                    android:id="@+id/update_info_edit_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
                app:counterTextAppearance="@style/counterAppearance"
                android:hint="@string/hint_email">

                <EditText
                    android:id="@+id/update_info_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
                app:counterTextAppearance="@style/counterAppearance"
                android:hint="@string/hint_phone">

                <EditText
                    android:id="@+id/update_info_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterOverflowTextAppearance="@style/counterOverFlowAppearance"
                app:counterTextAppearance="@style/counterAppearance"
                android:hint="@string/hint_gender">

                <EditText
                    android:id="@+id/update_info_edit_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="@string/hint_login" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>